# CluedoSolver

./: .clang-format  .gitignore  .gitmodules  .ignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
docs/: Doxyfile  annotated.html  annotated_dup.js  classes.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_88826aa2a10e1882b573f502bc7f4b55.html  dir_da5c6b39c0a2f54e57df6799511cd3ab.html  dir_da5c6b39c0a2f54e57df6799511cd3ab.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  index.html  navtreedata.js  navtreeindex0.js
docs/d0/dbc/: structCluedo_1_1PlayerData.html  structCluedo_1_1PlayerData.js
docs/d1/d19/: Solver_8hpp.html  Solver_8hpp_source.html
docs/d1/d2b/: structCluedo_1_1CardUtils_1_1cards__per__category-members.html
docs/d1/d55/: CardSet_8hpp.html  CardSet_8hpp.js  CardSet_8hpp_source.html
docs/d1/d6f/: LanguageStrings_8hpp.html  LanguageStrings_8hpp_source.html
docs/d1/d71/: classCluedo_1_1LanguageStrings-members.html
docs/d1/d93/: Error_8hpp.html  Error_8hpp.js  Error_8hpp_source.html
docs/d1/daa/: structCluedo_1_1CardUtils_1_1cards__per__category.html
docs/d1/dab/: structCluedo_1_1CardUtils_1_1CardIterator-members.html
docs/d1/dd9/: classCluedo_1_1UI_1_1MainWindow.html
docs/d2/d20/: structstd_1_1hash_3_01Cluedo_1_1CardSet_01_4.html
docs/d2/d3a/: classCluedo_1_1LanguageStrings.html  classCluedo_1_1LanguageStrings.js
docs/d2/d9e/: classResult_3_01void_00_01ErrorType_01_4-members.html
docs/d3/d86/: Player_8hpp.html  Player_8hpp_source.html
docs/d3/da1/: structCluedo_1_1LanguageStrings_1_1Language-members.html
docs/d3/db2/: Result_8hpp.html  Result_8hpp.js  Result_8hpp_source.html
docs/d3/db4/: classResult_3_01void_00_01ErrorType_01_4.html
docs/d3/dfd/: structCluedo_1_1CardUtils_1_1cards-members.html
docs/d3/dff/: structCluedo_1_1CardUtils.html
docs/d4/d0c/: classCluedo_1_1UI_1_1NewGameModal.html  classCluedo_1_1UI_1_1NewGameModal.js
docs/d4/d61/: classCluedo_1_1UI_1_1NewGameModal-members.html
docs/d4/d8c/: structCluedo_1_1Solver_1_1Suggestion.html  structCluedo_1_1Solver_1_1Suggestion.js
docs/d4/dc8/: structCluedo_1_1CardUtils_1_1CardIterator.html  structCluedo_1_1CardUtils_1_1CardIterator.js
docs/d4/dcc/: PlayerDataModal_8hpp.html  PlayerDataModal_8hpp.js  PlayerDataModal_8hpp_source.html
docs/d5/d04/: ErrorModal_8hpp.html  ErrorModal_8hpp_source.html
docs/d5/d4b/: classCluedo_1_1UI_1_1ErrorModal-members.html
docs/d5/d52/: structCluedo_1_1PlayerData-members.html
docs/d5/deb/: classCluedo_1_1UI_1_1ErrorModal.html
docs/d5/dfe/: structCluedo_1_1CardUtils-members.html
docs/d6/d39/: Card_8hpp.html  Card_8hpp_source.html
docs/d6/def/: classCluedo_1_1CardSet-members.html
docs/d7/d56/: classCluedo_1_1UI_1_1MainWindow-members.html
docs/d7/dc6/: classCluedo_1_1Player.html
docs/d8/dce/: classResult.html
docs/da/d17/: classCluedo_1_1UI_1_1PlayerDataModal-members.html
docs/da/d1f/: classCluedo_1_1Player-members.html
docs/da/d6e/: MainWindow_8hpp.html  MainWindow_8hpp.js  MainWindow_8hpp_source.html
docs/da/d99/: AddInformationModal_8hpp.html  AddInformationModal_8hpp.js  AddInformationModal_8hpp_source.html
docs/da/da3/: classCluedo_1_1CardSet.html  classCluedo_1_1CardSet.js
docs/db/dc2/: classCluedo_1_1UI_1_1AddInformationModal-members.html
docs/dc/d1d/: NewGameModal_8hpp.html  NewGameModal_8hpp.js  NewGameModal_8hpp_source.html
docs/dc/d59/: classResult-members.html
docs/dc/d77/: classCluedo_1_1Solver.html
docs/dd/d40/: structCluedo_1_1CardUtils_1_1cards.html
docs/dd/db1/: structCluedo_1_1LanguageStrings_1_1Language.html  structCluedo_1_1LanguageStrings_1_1Language.js
docs/dd/dc2/: classCluedo_1_1UI_1_1PlayerDataModal.html
docs/de/d0b/: classCluedo_1_1CardSet_1_1iterator-members.html
docs/de/d5b/: classCluedo_1_1CardSet_1_1iterator.html  classCluedo_1_1CardSet_1_1iterator.js
docs/de/d66/: structCluedo_1_1Solver_1_1Suggestion-members.html
docs/de/d8a/: classCluedo_1_1Solver-members.html  structstd_1_1hash_3_01Cluedo_1_1CardSet_01_4-members.html
docs/de/db8/: classCluedo_1_1UI_1_1AddInformationModal.html
docs/html/: annotated.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_88826aa2a10e1882b573f502bc7f4b55.html  dir_da5c6b39c0a2f54e57df6799511cd3ab.html  files.html  functions_func.html  functions_type.html  functions_vars.html  globals_defs.html  index.html  menudata.js
docs/html/search/: all_10.js  all_11.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_2.js  defines_3.js  defines_4.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_2.js  files_3.js  (+18 more)
docs/search/: all_1.js  all_13.js  all_14.js  all_2.js  all_7.js  all_c.js  classes_1.js  classes_3.js  classes_5.js  defines_0.js  defines_1.js  enums_0.js  files_0.js  files_1.js  files_7.js  functions_10.js  functions_2.js  functions_8.js  functions_9.js  functions_a.js  functions_d.js  variables_3.js  variables_5.js  variables_7.js
docs_src/: Doxyfile
include/PCG/: pcg_uint128.hpp
res/: CMakeLists.txt  CluedoSolver.desktop  en.json  it.json
res/icons/: icon.cpp
res/lang/: en.json  it.json
src/: CMakeLists.txt  Card.cpp  Card.hpp  CardSet.hpp  Error.cpp  Error.hpp  LanguageStrings.cpp  LanguageStrings.hpp  Player.cpp  Player.hpp  Solver.cpp  Solver.hpp  Strings.cpp  Strings.hpp  UI.cpp  UI.hpp  main.cpp
src/fonts/: IBMPlexSans-Medium.cpp  IBMPlexSans-Regular.cpp  fa-regular-400.cpp  fa-solid-900.cpp
src/libs/PCG/: pcg_extras.hpp  pcg_random.hpp
src/misc/: generate_fonts_cpp.cpp  generate_langs_cpp.cpp
src/ui/: AddInformationModal.cpp  AddInformationModal.hpp  ErrorModal.cpp  ErrorModal.hpp  MainWindow.cpp  MainWindow.hpp  NewGameModal.cpp  NewGameModal.hpp  PlayerDataModal.cpp  PlayerDataModal.hpp
src/utils/: Result.hpp
(+51 files in other folders)
